// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](readme_.md) \\| API

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.md)
"
`;

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • API

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.md)
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../../readme_.md) \\| [API](../../README.md)

***

[typedoc-stubs](../../README.md) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

• **new ModuleClass**(): [\`ModuleClass\`](ModuleClass.md)

#### Returns

[\`ModuleClass\`](ModuleClass.md)
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • API

***

[typedoc-stubs](../../index.md) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

• **new ModuleClass**(): [\`ModuleClass\`](ModuleClass.md)

#### Returns

[\`ModuleClass\`](ModuleClass.md)
"
`;

exports[`EntryFiles should get readme file: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • Readme \\| [API](README.md)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;
